Decorators with arguments

--- a/50_Decorators/decorators.ipynb
+++ b/50_Decorators/decorators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decorators\n",
+    "# 50_01 Decorators\n",
     "\n",
     "### Explanation\n",
     "\n",
@@ -37,12 +37,12 @@
     "\n",
     "In this example, `my_decorator` is a decorator that adds print statements before and after the execution of `say_hello()` function. When you call `say_hello()`, it actually calls the `wrapper()` function inside `my_decorator`.\n",
     "\n",
-    "### First example"
+    "### Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -99,111 +99,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Second example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Function add started.\n",
-      "4\n",
-      "Function add ended.\n"
-     ]
-    }
-   ],
-   "source": [
-    "def log_decorator(func):\n",
-    "    def wrapper(*args, **kwargs):\n",
-    "        print(f\"Function {func.__name__} started.\")\n",
-    "        result = func(*args, **kwargs)\n",
-    "        print(result)\n",
-    "        print(f\"Function {func.__name__} ended.\")\n",
-    "    return wrapper\n",
-    "\n",
-    "@log_decorator\n",
-    "def add(a, b):\n",
-    "    return a + b\n",
-    "\n",
-    "add(1,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def add(a, b):\n",
-    "    return a + b\n",
-    "\n",
-    "add(3,2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Practice 01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello all!\n",
-      "Welcome to the decorator lesson\n",
-      "We are happy to have you here\n"
-     ]
-    }
-   ],
-   "source": [
-    "def decorator(func):\n",
-    "    def wrapped():\n",
-    "        print(\"Hello all!\")\n",
-    "        func()\n",
-    "        print(\"We are happy to have you here\")\n",
-    "    return wrapped\n",
-    "\n",
-    "\n",
-    "@decorator\n",
-    "def welcoming_message():\n",
-    "    print(\"Welcome to the decorator lesson\")\n",
-    "    \n",
-    "welcoming_message()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Practice 02"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -237,12 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practice 03"
+    "### Practice 02"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +171,13 @@
     "\n",
     "doctor_name()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
