Closure and Lambda function

--- a/46_Closure/closure.ipynb
+++ b/46_Closure/closure.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Closure\n",
+    "# 46_01 Closure\n",
     "\n",
     "In Python, a closure is a programming concept where a nested function remembers the environment in which it was created. This concept is crucial in functional programming and helps provide a way to maintain state in an immutable environment.\n",
     "\n",
