--- a/46_Closure/closure.ipynb
+++ b/46_Closure/closure.ipynb
@@ -92,6 +92,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Josh McDillan'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def name_surname(name, surname):\n",
+    "    def full_name():\n",
+    "        return f\"{name} {surname}\"\n",
+    "    return full_name\n",
+    "\n",
+    "name_surname(\"Josh\", \"McDillan\")()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
