--- a/44_Functions_advanced/variable_scope.ipynb
+++ b/44_Functions_advanced/variable_scope.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -81,17 +81,6 @@
      "output_type": "stream",
      "text": [
       "This is a Local variable\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'local_var' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is a \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlocal_var\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m printing()\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlocal_var\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'local_var' is not defined"
      ]
     }
    ],
@@ -109,18 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling a Local variable from a nested function\n"
+     ]
+    }
+   ],
    "source": [
     "def printing():\n",
     "    local_var = \"Local variable\"\n",
-    "    print(f\"This is a {local_var}\")\n",
+    "    # print(f\"This is a {local_var}\")\n",
     "    \n",
     "    def nested_function():\n",
     "        print(f\"Calling a {local_var} from a nested function\")\n",
     "    \n",
-    "    ne"
+    "    nested_function()\n",
+    "    \n",
+    "printing()"
    ]
   }
  ],
