--- a/09_Functions/functions.ipynb
+++ b/09_Functions/functions.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -53,27 +53,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "121.0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price after tax: 121.0\n"
+     ]
     }
    ],
    "source": [
-    "def vat_function(price, vat=21):\n",
+    "#default values\n",
+    "def vat_function(price, vat=21) -> float: #-> float is a clue, does not have an impact in the code. Not necessary\n",
     "    return price + (price * vat / 100)\n",
     "\n",
     "price = 100\n",
     "\n",
-    "vat_function(price)\n"
+    "print(f\"Price after tax: {vat_function(price)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "New list:\n",
+      " - Jhon\n",
+      " - Grace\n",
+      " - Martin\n",
+      " - William\n",
+      " - Francis\n",
+      "\n",
+      "New list:\n",
+      " - Laura\n",
+      " - Grace\n",
+      " - Charles\n"
+     ]
+    }
+   ],
+   "source": [
+    "def listing_names(*names): #this will be turned into a tuple\n",
+    "    print(\"\\nNew list:\")\n",
+    "    for name in names:\n",
+    "        print(f\" - {name}\")\n",
+    " \n",
+    "listing_names(\"Jhon\", \"Grace\", \"Martin\", \"William\", \"Francis\")\n",
+    "listing_names(\"Laura\", \"Grace\", \"Charles\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable arguments key-value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The word 'house' means: 'Where people live'\n",
+      " The word 'cat' means: 'Small four-legged animal'\n",
+      " The word 'I' means: 'Myself'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def key_value_arguments(**terms): #kwargs\n",
+    "    for key, value in terms.items():\n",
+    "        print(f\" The word '{key}' means: '{value}'\")\n",
+    "        \n",
+    "key_value_arguments(house = \"Where people live\",\n",
+    "                   cat = \"Small four-legged animal\",\n",
+    "                   I = \"Myself\")"
    ]
   },
   {
