--- a/09_Functions/functions.ipynb
+++ b/09_Functions/functions.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 09 Functions"
+    "# 09 Functions\n",
+    "\n",
+    "### Basics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -78,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable arguments"
+    "### args: Variable arguments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +121,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable arguments key-value"
+    "### kwargs: Variable arguments key-value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -148,11 +150,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Different datatypes as arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The only value is a string: Lucy\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_names(names):\n",
+    "    if type(names) != list and type(names) != str:\n",
+    "        list(names)\n",
+    "        print(\"Changed to list!\\n\")\n",
+    "        for name in names:\n",
+    "            print(name)\n",
+    "    if type(names) == str:\n",
+    "        print(\"The only value is a string:\", names)\n",
+    "\n",
+    "names = (\"Jhon\", \"Grace\", \"Martin\", \"William\", \"Francis\")\n",
+    "\n",
+    "# show_names(names)\n",
+    "# show_names((\"Charles\", \"Mary\"))\n",
+    "show_names(\"Lucy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recursive functions\n",
+    "\n",
+    "A **recursive function** is a function in programming that calls itself during its execution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    # Base case: factorial of 0 or 1 is 1\n",
+    "    if n in (0, 1):\n",
+    "        return 1\n",
+    "    # Recursive case: n! = n * (n-1)!\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)\n",
+    "\n",
+    "    \n",
+    "factorial(5)"
+   ]
   }
  ],
  "metadata": {
