Scope variable global and nonlocal

--- a/44_Functions_advanced/variable_scope.ipynb
+++ b/44_Functions_advanced/variable_scope.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +121,74 @@
     "    \n",
     "printing()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global variable from a function: Global variable\n",
+      "Global variable from a function: Local variable\n",
+      "Global variable from a function: Global variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "#global: with error\n",
+    "\n",
+    "global_var = \"Global variable\"\n",
+    "\n",
+    "def printing():\n",
+    "    print(f\"Global variable from a function: {global_var}\")\n",
+    "    local_var = \"Local variable\"\n",
+    "    print(f\"Global variable from a function: {local_var}\")\n",
+    "    var_global = \"New value of global variable\" #this won't change the value of the global variable\n",
+    "    print(f\"Global variable from a function: {global_var}\") \n",
+    "printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global variable from a function: Global variable\n",
+      "Local variable from a function: Local variable\n",
+      "Global variable from a function after modification: New value of global variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "#global: soliving the error\n",
+    "global_var = \"Global variable\"\n",
+    "\n",
+    "def printing():\n",
+    "    global global_var  # Declare that you are using the global variable 'global_var'\n",
+    "    \n",
+    "    print(f\"Global variable from a function: {global_var}\")\n",
+    "    local_var = \"Local variable\"\n",
+    "    print(f\"Local variable from a function: {local_var}\")\n",
+    "    \n",
+    "    global_var = \"New value of global variable\"  # Now this will change the value of the global variable\n",
+    "    print(f\"Global variable from a function after modification: {global_var}\") \n",
+    "\n",
+    "printing()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
