--- a/10_Classes/classes.ipynb
+++ b/10_Classes/classes.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -116,22 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Car example: class and objects\n",
     "\n",
+    "#a class might have attributes and methods\n",
+    "\n",
     "class Car:\n",
+    "    #here you would add class attributes\n",
     "    def __init__(self, brand, model, year, engine_cc, price, horsepower, seats, trunk_capacity, max_speed, zero_to_hundred_time):\n",
+    "        #these are all instace attributes (don't share info between different object):\n",
     "        self.brand = brand\n",
     "        self.model = model\n",
     "        self.year = year\n",
@@ -142,7 +138,11 @@
     "        self.trunk_capacity = trunk_capacity\n",
     "        self.max_speed = max_speed\n",
     "        self.zero_to_hundred_time = zero_to_hundred_time\n",
-    "\n",
+    "    \n",
+    "    #methods:\n",
+    "    def show_detail(self):\n",
+    "        print(f\"The car is a {self.brand} {self.model} from {self.year}, with a price of {self.price} USD.\")\n",
+    "        pass\n",
     "\n",
     "# Creating objects\n",
     "\n",
@@ -150,7 +150,7 @@
     "ferrari = Car(\n",
     "    brand=\"Ferrari\",\n",
     "    model=\"F8 Tributo\",\n",
-    "    year=2021,\n",
+    "    year=2023,\n",
     "    engine_cc=3902,  # 3.9L V8 engine\n",
     "    price=276450,  # Approximate price in USD\n",
     "    horsepower=710,\n",
@@ -161,21 +161,152 @@
     ")\n",
     "\n",
     "# Creating a regular, affordable car object\n",
-    "toyota_corolla = Car(\n",
+    "toyota = Car(\n",
     "    brand=\"Toyota\",\n",
     "    model=\"Corolla\",\n",
     "    year=2021,\n",
     "    engine_cc=1798,  # 1.8L engine\n",
-    "    price=20000,  # Approximate price in USD\n",
+    "    price=19995,  # Approximate price in USD\n",
     "    horsepower=139,\n",
     "    seats=5,\n",
     "    trunk_capacity=371,  # Trunk capacity in liters\n",
     "    max_speed=180,  # Max speed in km/h\n",
     "    zero_to_hundred_time=9.0  # 0 to 100 km/h time in seconds\n",
-    ")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ferrari 0x26adae26640\n",
+      "Toyota 0x26adabcbf10\n",
+      "Toyota 2657959591696\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print object reference\n",
     "\n",
+    "print(ferrari.brand, hex(id(ferrari)))\n",
+    "print(toyota.brand, hex(id(toyota_corolla)))\n",
+    "print(toyota.brand, id(toyota_corolla))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old: Ferrari 200\n",
+      "New: Ferrari 175\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modify object attributes\n",
     "\n",
-    "print(ferrari.price // toyota_corolla.price)\n"
+    "print(\"Old:\", ferrari.brand, ferrari.trunk_capacity)\n",
+    "\n",
+    "#modify trunk capacity of the Ferrari object\n",
+    "\n",
+    "ferrari.trunk_capacity = 175\n",
+    "\n",
+    "print(\"New:\", ferrari.brand, ferrari.trunk_capacity)\n",
+    "\n",
+    "#this must be done with methods and encapsulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is a Toyota Corolla from 2021, with a price of 20000 USD.\n",
+      "The car is a Ferrari F8 Tributo from 2023, with a price of 276450 USD.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using the created method\n",
+    "\n",
+    "toyota.show_detail() #using the method\n",
+    "ferrari.show_detail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is a Ferrari F8 Tributo from 2023, with a price of 276450 USD.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#show method using the class name (Car)\n",
+    "\n",
+    "Car.show_detail(ferrari)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create an attribute for just one object\n",
+    "# it wont be shared with other object\n",
+    "\n",
+    "ferrari.color = \"Red\"\n",
+    "print(ferrari.color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Car' object has no attribute 'color'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[48], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#this won't work\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtoyota\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolor\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Car' object has no attribute 'color'"
+     ]
+    }
+   ],
+   "source": [
+    "#this won't work\n",
+    "print(toyota.color)"
    ]
   },
   {
