--- a/10_Classes/classes.ipynb
+++ b/10_Classes/classes.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "#this won't work\n",
+    "#this won't work becasuse we have only modified Ferrari object\n",
     "print(toyota.color)"
    ]
   },
